src/test/deca/context/invalid/Objet/Selection-ProtectedField.deca
// Description:
//      Program abnormally trying to access a protected field
//
// Result:
//      Contextual Error
//      Line 18: (RULE 3.66) Selecting class not a subclass of current class
//
// History:
//      Created in 17/1/2022

class A {
    protected int x;
}

class B extends A {
    int getX(A a) {
        return a.x;
    }
}

class X {
    void m() {
        A a = new A();
        B b = new B();
        println(b.getX(a)) ; // 'a' type (A) is not a subtype of B
    }
}


